--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="28dp"
         android:textStyle="bold"
         android:text="Email"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvError" />
@@ -26,6 +27,8 @@
         android:ems="10"
         android:textStyle="bold"
         android:hint="Email"
+        android:textColor="@color/black"
+        android:textColorHint="#000000"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
@@ -39,6 +42,7 @@
         android:layout_marginTop="24dp"
         android:textStyle="bold"
         android:text="Contraseña"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,6 +56,9 @@
         android:ems="10"
         android:textStyle="bold"
         android:hint="Contraseña"
+        android:textColorHint="#000000"
+
+        android:textColor="@color/black"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
@@ -63,7 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Loguearse"
+        android:text="Log In"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etPassword" />
@@ -88,6 +95,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="42dp"
         android:text="@string/app_name"
+        android:textColor="@color/black"
         android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
