--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,9 +17,15 @@
             android:icon="@drawable/baseline_location_city_24"
             android:title="Inmuebles" />
         <item
+            android:id="@+id/nav_crearInmueble"
+            android:icon="@drawable/baseline_location_city_24"
+            android:title="Crear Inmueble"
+            />
+        <item
             android:id="@+id/nav_inquilinos"
             android:icon="@drawable/baseline_people_alt_24"
             android:title="Inquilinos" />
+
         <item
             android:id="@+id/nav_contratos"
             android:icon="@drawable/baseline_assignment_24"
