--- a/app/src/main/res/layout/crear_inmueble_fragment.xml
+++ b/app/src/main/res/layout/crear_inmueble_fragment.xml
@@ -47,14 +47,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ETDirrecion" />
 
-    <EditText
+    <TextView
         android:id="@+id/ETLatitud"
-        android:layout_width="200dp"
-        android:layout_height="45dp"
+        android:layout_width="78dp"
+        android:layout_height="28dp"
         android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="Latitud"
         android:inputType="number"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +65,7 @@
         android:id="@+id/TVFotoE"
         android:layout_width="255dp"
         android:layout_height="57dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="24dp"
         android:text="Sin foto guardada"
         android:textAlignment="center"
         android:textSize="24sp"
@@ -77,14 +78,14 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="28dp"
-        android:text="Disponibilidad"
+        android:layout_marginTop="24dp"
 
+        android:text="Disponibilidad"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ETLatitud" />
+        app:layout_constraintTop_toBottomOf="@+id/spUso" />
 
     <Button
         android:id="@+id/button"
@@ -96,14 +97,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cbDisponible" />
 
-    <EditText
+    <TextView
         android:id="@+id/ETLongitud"
-        android:layout_width="200dp"
-        android:layout_height="45dp"
+        android:layout_width="61dp"
+        android:layout_height="22dp"
         android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="Longitud"
         android:inputType="number"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -131,14 +133,15 @@
         android:text="Crear Inmueble"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TVFotoE"
-        app:layout_constraintVertical_bias="0.495" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <Spinner
         android:id="@+id/spTipo"
-        android:layout_width="253dp"
-        android:layout_height="24dp"
+        android:layout_width="256dp"
+        android:layout_height="50dp"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.898"
@@ -147,8 +150,8 @@
 
     <Spinner
         android:id="@+id/spUso"
-        android:layout_width="253dp"
-        android:layout_height="24dp"
+        android:layout_width="258dp"
+        android:layout_height="50dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.898"
@@ -159,10 +162,10 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="36dp"
         android:text="Tipo de Inmueble"
         app:layout_constraintEnd_toStartOf="@+id/spTipo"
-        app:layout_constraintHorizontal_bias="0.511"
+        app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ETSuperf" />
 
@@ -170,12 +173,22 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="48dp"
         android:text="Uso del inmueble"
         app:layout_constraintEnd_toStartOf="@+id/spUso"
-        app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <ImageView
+        android:id="@+id/ivFSacada"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TVFotoE"
+        tools:src="@tools:sample/avatars" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
