--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,9 +12,6 @@
         <action
             android:id="@+id/action_InmueblesDetallesFragment_to_nav_Inmuebles"
             app:destination="@id/nav_Inmuebles" />
-        <action
-            android:id="@+id/action_InmueblesDetallesFragment_to_nav_crearInmueble"
-            app:destination="@id/nav_crearInmueble" />
     </fragment>
     <fragment
         android:id="@+id/nav_Inmuebles"
@@ -99,8 +96,8 @@
         android:label="Crear Inmueble"
         tools:layout="@layout/crear_inmueble_fragment" >
         <action
-            android:id="@+id/action_nav_crearInmueble_to_InmueblesDetallesFragment2"
-            app:destination="@id/InmueblesDetallesFragment" />
+            android:id="@+id/action_nav_crearInmueble_to_nav_Inmuebles"
+            app:destination="@id/nav_Inmuebles" />
     </fragment>
 
 
